--- a/.gitignore
+++ b/.gitignore
@@ -3,15 +3,39 @@ examples/*/output
 cifar-10-batches-py
 
 
+# Created by https://www.gitignore.io/api/python, and modified...
+
+## Linux backup files
+*~
+
+## Arhives
+*.zip
+
+### Mac OS X stuff ###
+Desktop DF
+Desktop DB
+.Spotlight-V100
+.DS_Store
+.Trashes
+.com.apple.timemachine.supported
+.fseventsd
+.syncinfo
+.TemporaryItems
+report/
+
+### Python ###
 # Byte-compiled / optimized / DLL files
-*.pyc
 __pycache__/
 *.py[cod]
 *$py.class
-.ipynb_checkpoints/
+.pytest_cache
+
+# C extensions
+*.so
 
 # Distribution / packaging
 .Python
+env/
 build/
 develop-eggs/
 dist/
@@ -23,11 +47,20 @@ lib64/
 parts/
 sdist/
 var/
-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
 MANIFEST
+*.spec
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
 # Unit test / coverage reports
 htmlcov/
@@ -37,10 +70,25 @@ htmlcov/
 .cache
 nosetests.xml
 coverage.xml
-*.cover
+*,cover
 .hypothesis/
-.pytest_cache/
 
-# Documentation
-/docs/src/
-/docs/build/
+# Translations
+*.mo
+*.pot
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+target/
+
+# IPython Notebook
+.ipynb_checkpoints
+
+# pyenv
+.python-version
+
+# Idea
+.idea
+*.iml
